Exemplo de alteração
Modificação no arquivo Index.cshtml

--- a/TesteGitHubWindows/Views/Home/Index.cshtml
+++ b/TesteGitHubWindows/Views/Home/Index.cshtml
@@ -11,5 +11,8 @@
             para demonstrar o funcionamento da ferramenta GitHub
             for Windows 2.0.
         </h4>
+        <p>
+            Exemplo de alteração efetuada em 09/09/2014.
+        </p>
     </div>
 </div>
